--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
     },
     "action": {
       "default_popup": "popup.html",
-      "default_icon": "icon.webp"
+      "default_icon": "icon.png"
     },
     "content_scripts": [
       {
