--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,16 @@
 {
     "manifest_version": 3,
     "name": "Xmator",
-    "version": "1.0",
-    "description": "A smart Twitter unfollow tool",
+    "version": "2.0",
+    "description": "Smart Twitter automation tool that analyzes user bios based on keywords for intelligent follow/unfollow actions",
     "permissions": ["storage", "scripting", "tabs", "activeTab"],
-    "host_permissions": ["https://twitter.com/*"],
+    "host_permissions": ["https://twitter.com/*", "https://x.com/*"],
     "background": {
       "service_worker": "background.js"
     },
     "action": {
       "default_popup": "popup.html",
       "default_icon": "icon.png"
-    },
-    "content_scripts": [
-      {
-        "matches": ["https://twitter.com/*"],
-        "js": ["content.js"]
-      }
-    ]
+    }
   }
   
